# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
Krispy/: .old.CMakeLists.txt
Krispy/src/: Krispy.h
Krispy/src/Krispy/Core/: Application.cpp  Application.h  Base.h  Entry.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Mousecodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  Timestep.h  Types.h  Window.h
Krispy/src/Krispy/Debug/: Debuggable.h  Instrumentor.h  OpenGLDebug.cpp  OpenGLDebug.h
Krispy/src/Krispy/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Krispy/src/Krispy/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Krispy/src/Krispy/Materials/: Material.cpp  Material.h
Krispy/src/Krispy/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererApi.cpp  RendererApi.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Krispy/src/Platform/Linux/: LinuxInput.cpp  LinuxWindow.cpp  LinuxWindow.h
Krispy/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGlBuffer.cpp  OpenGlBuffer.h  OpenGlContext.cpp  OpenGlContext.h  OpenGlShader.cpp  OpenGlShader.h  OpenGlTexture.cpp  OpenGlTexture.h  OpenGlVertexArray.cpp  OpenGlVertexArray.h
sandbox/: main.cpp
sandbox/assets/shaders/: FlatColor.glsl  LearnOpenGL.glsl  Texture.glsl  Texture3D.glsl
sandbox/src/: Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h  Sandbox3D.cpp  Sandbox3D.h
